@@ -2,6 +2,7 @@
 + added some more XML filter interfaces (mainly monogram filters)
 + added ALLOCATOR_PROPERTIES information for pin connection
 + added "Progress View" form
++ fixed a strange menu event problem
 
 [0.2.2.0 - Beta    24/Mar/2008]
 + added frame-step button
